feat: use Firebase Auth for login and signup
- Change to Firebase for auth
- Update sign-in, sign-up, and sign-out methods
- Save user data locally

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   # 위치 서비스
   geolocator: ^10.1.0
   google_maps_flutter: ^2.5.0
+  firebase_core: ^2.27.1
+  firebase_auth: ^4.17.9
 
 dev_dependencies:
   flutter_test:
