--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,6 +5,17 @@ allprojects {
     }
 }
 
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.3.1" // Gradle 버전
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20" // Kotlin 버전
+    }
+}
+
 rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
