--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   shared_preferences: ^2.2.2
   # 위치 서비스
   geolocator: ^10.1.0
-  google_maps_flutter: ^2.5.0
+  flutter_naver_map: ^1.1.1
   firebase_core: ^2.27.1
   firebase_auth: ^4.17.9
 
@@ -101,4 +101,4 @@ flutter:
 
   assets:
     - assets/images/
-    - assets/icons/
+  #  - assets/icons/
