--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   geolocator: ^10.1.0
   firebase_core: ^2.24.2
   firebase_auth: ^4.17.9
+  cloud_firestore: ^4.14.0
+  cloud_functions: ^4.6.9
 
 dev_dependencies:
   flutter_test:
